# near-exporter

./: Cargo.toml  Dockerfile
.github/workflows/: build-and-deploy.yaml
deploy/prod/: deploy.yaml  kustomization.yaml  probe.yaml  svc.yaml
src/: collector.rs  main.rs  near.rs  router.rs
