[package]
name = "near-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-jsonrpc-client = "^0.9.0"
near-primitives = "^0.21.0"
near-jsonrpc-primitives = "^0.21.0"

prometheus = "^0.13.0"
futures = "0.3"

axum = "^0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
